--- a/about.html
+++ b/about.html
@@ -784,9 +784,8 @@
           <div>Voice of Enterprise</div>
         </div>
         <div class="thin">
-          Annual EnterpriseNGR event to engage key industry stakeholders (both
-          globally and in Nigeria) as well as policymakers at all levels of
-          government.
+          Annual event that brings together key Nigerian and global industry
+          stakeholders and policy makers from all levels of government.
         </div>
         <a href="greenstart.html"
           ><button class="md_btn">
@@ -824,7 +823,8 @@
         <div class="membership_text">
           <div class="text">
             Join our network of members at the forefront of advancing the
-            development and transformation of Nigeria.
+            development and transformation of Nigeria’s Financial and
+            Professional Services (FPS) Sector.
           </div>
           <a href="member.html">
             <button class="md_btn">
