--- a/agenda.html
+++ b/agenda.html
@@ -40,13 +40,12 @@
 
     <section class="economy">
       <div class="sm_heading">
-        To position Nigeria as a leading financial centre in Africa and the
-        world.
+        To position Nigeria as a leading financial centre in Africa.
       </div>
       <div class="md_heading">
-        "We aim to advance this agenda by actively collaborating with our
+        “We aim to advance this agenda by actively collaborating with our
         members, industry partners, policymakers, regulators and other
-        stakeholders."
+        stakeholders.”
       </div>
 
       <div class="economy_grid">
@@ -56,12 +55,13 @@
 
         <div class="economy_description">
           <div class="bold">
-            Our pursuit of recognizable success in all these areas will be
+            Our pursuit of recognizable success in our priority areas will be
             supported by strong and reliable research and data insights – all
             aimed at supporting the growth of the Nigerian FPS sector and
-            positioning it as a leading financial centre in Africa and the
-            world.
+            positioning it as a leading financial centre in Africa.
           </div>
+
+          <div class="thin text">Key Priority Areas:</div>
           <div>
             <ul>
               <li>
@@ -89,7 +89,7 @@
                   style="color: #40ba7b"
                   data-width="26"
                 ></span
-                >International Trade and Investment.
+                >International Trade & Investment.
               </li>
               <li>
                 <span
@@ -114,11 +114,6 @@
           <div class="thin">
             We aim to advance this agenda by actively collaborating with our
             members, industry partners, government regulators, and stakeholders.
-            Our pursuit of recognizable success in all these areas will be
-            supported by strong and reliable research and data insights – all
-            aimed at supporting the growth of the Nigerian FPS sector and
-            positioning it as a leading financial centre in Africa and the
-            world.
           </div>
           <a href="about.html">
             <button class="big_btn">
@@ -193,7 +188,8 @@
         <div class="membership_text">
           <div class="text">
             Join our network of members at the forefront of advancing the
-            development and transformation of Nigeria.
+            development and transformation of Nigeria’s Financial and
+            Professional Services (FPS) Sector.
           </div>
           <a href="member.html"
             ><button class="md_btn">
@@ -220,8 +216,8 @@
           <div class="md_heading">Partnership</div>
           <div>
             We build strong partnerships with key stakeholders in the private
-            and public sectors, to achieve our objectives across our priority
-            areas.
+            and public sectors, locally and internationally, to achieve our
+            objectives across our priority areas.
           </div>
         </div>
         <div>
@@ -331,6 +327,46 @@
           <div class="card"></div>
           <div class="card"></div>
         </div>
+      </div>
+    </section>
+
+    <section class="enterprise_voice">
+      <div class="voice">
+        <div class="md_heading">
+          <div>EnterpriseNGR |</div>
+          <div>Voice of Enterprise</div>
+        </div>
+        <div class="thin">
+          Annual event that brings together key Nigerian and global industry
+          stakeholders and policy makers from all levels of government.
+        </div>
+        <a href="greenstart.html"
+          ><button class="md_btn">
+            <span
+              class="iconify"
+              data-icon="bi:arrow-right-circle-fill"
+              style="color: black"
+              data-width="26"
+            ></span
+            ><span class="btn_text">Learn More</span>
+          </button></a
+        >
+      </div>
+      <div class="green">
+        <div>JOIN NOW</div>
+        <div class="md_heading">Monthly Newsletter</div>
+        <form action="">
+          <input type="email" placeholder="Enter your email address" />
+          <button class="md_btn">
+            <span
+              class="iconify"
+              data-icon="bi:arrow-right-circle-fill"
+              style="color: #40ba7b"
+              data-width="26"
+            ></span
+            ><span class="btn_text">Subscribe</span>
+          </button>
+        </form>
       </div>
     </section>
 
