--- a/greenstart.html
+++ b/greenstart.html
@@ -68,8 +68,8 @@
       <div class="greenstart_ad">
         <div class="md_heading green">Ready to get your #GreenStart?</div>
         <div class="bold">
-          YOE will make you a star candidate for recruitment into Nigeria’s
-          labour force with the following:
+          Youth of Enterprise will make you a star candidate for recruitment
+          into Nigeria’s labour force with the following:
         </div>
         <div>
           <ul>
@@ -89,7 +89,7 @@
                 style="color: #40ba7b"
                 data-width="26"
               ></span
-              >Hands-on Training
+              >On-the-job Training
             </li>
             <li>
               <span
@@ -146,13 +146,14 @@
           </div>
           <div class="thin">
             The National Population Commission places Nigeria’s population at
-            about 220 million with 50% of the population comprising youths.
-            Unfortunately, over 38.5% of Nigerian youths remain unemployed and a
-            larger percentage are underemployed.
+            about 220 million with 50% of the population comprising youth.
+            Unfortunately, over 38.5% of Nigerian youth remain unemployed and a
+            larger percentage are underemployed (NBS, 2022).
           </div>
           <div class="thin">
-            We seek to improve the employment and employability of Nigerian
-            youth with the YOE Internship Programme.
+            With the YOE Internship Programme we seek to improve the
+            employability of Nigerian youth and position them for success in the
+            workplace.
           </div>
         </div>
 
@@ -171,23 +172,22 @@
         <div class="economy_description">
           <div class="md_heading green">We are on a Mission.</div>
           <div class="thin">
-            Everywhere you look, you are faced with graduates who, after
-            searching tirelessly for jobs, are forced to settle for menial jobs
-            or worse, dovetail into depression due to the financial, emotional,
-            and physical pressure unemployment brings.
+            Everywhere you look, you see graduates who, after searching
+            tirelessly for jobs, are forced to settle for menial jobs or worse
+            still, have sunk into depression due to the financial, emotional,
+            and physical stress unemployment brings.
           </div>
           <div class="thin">
-            Some have passed through a system that did not fully equip them for
-            the demands of the corporate world and hence, experience the shock
-            of being labeled “unemployable” when they eventually get a chance to
-            prove their worth.
+            Educational systems may not have equiped them with the skills to
+            meet the demands of the corporate world and access to information on
+            job opportunities is not always easy to come by.
           </div>
           <div class="thin">
-            But all that is about to change. We are on a mission to equip
-            Nigerian graduates with the requisite skills, qualifications and
-            experience they need to excel in the financial services sector and
-            stand shoulder to shoulder with their global counterparts through
-            the Youth Of Enterprise (YOE) initiative.
+            But all that is about to change with the Youth of Enterprise (YOE)
+            Internship Programme. We are on a mission to equip Nigerian
+            graduates with the requisite skills and experience they need to
+            excel in the workplace and stand shoulder to shoulder with their
+            global counterparts.
           </div>
           <div class="btn">
             <a href="http://youthofenterprise.ng/login"
@@ -208,45 +208,12 @@
 
     <section class="benefit">
       <div class="md_heading">
-        Through the YOE Programme, EnterpriseNGR is playing a vital role in
-        facilitating capacity building in the private sector and contributing to
-        resolving the problem of unemployment in Nigeria.
+        Through the Youth of Enterprise (YOE) Internship Programme,
+        EnterpriseNGR is playing a vital role in facilitating capacity building
+        in the private sector and contributing to resolving the problem of
+        unemployment in Nigeria.
       </div>
     </section>
-
-    <!-- <div class="mission_wrapper">
-      <section class="economy mission">
-        <div class="economy_grid">
-          <div class="economy_description">
-            <div class="md_heading green">Our Approach</div>
-            <div class="thin">
-              Through the YOE Programme, EnterpriseNGR is playing a vital role
-              in facilitating capacity building in the private sector and
-              contributing to resolving the problem of unemployment in Nigeria.
-            </div>
-            <div class="thin">
-              Working with identified partners in the financial and professional
-              services sector, we will engage and recruit about 5,000 interns
-              who are graduates with not more than five years post-graduation
-              for placements to partner organizations.
-            </div>
-            <div class="thin">
-              The Programme is designed to improve the skillsets, professional
-              competence, and employability of program participants while also
-              providing them with workplace experience.
-            </div>
-            <div class="thin">
-              Following the envisaged success of the program, we aim to scale to
-              100,000 annually in five years
-            </div>
-          </div>
-
-          <div class="img">
-            <img src="images/greenstart2.png" alt="Economy" />
-          </div>
-        </div>
-      </section>
-    </div> -->
 
     <section class="approachngr">
       <div class="md_heading">Our Approach</div>
@@ -415,7 +382,7 @@
                 data-width="26"
               ></span>
               <span class="text"
-                >Empower the next generation of workplace talent</span
+                >Empower the next generation of workplace talent.</span
               >
             </li>
             <li>
@@ -454,9 +421,7 @@
                 style="color: #40ba7b"
                 data-width="26"
               ></span>
-              <span class="text"
-                >Our committment to capacity building for future growth.</span
-              >
+              <span class="text">Build capacity for future growth.</span>
             </li>
           </ul>
         </div>
@@ -470,9 +435,8 @@
               <div>Voice of Enterprise</div>
             </div>
             <div class="thin">
-              Annual EnterpriseNGR event to engage key industry stakeholders
-              (both globally and in Nigeria) as well as policymakers at all
-              levels of government.
+              Annual event that brings together key Nigerian and global industry
+              stakeholders and policy makers from all levels of government.
             </div>
             <a href="greenstart.html"
               ><button class="md_btn">
