--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
       <div class="heading">Growth</div>
       <div class="heading">Starts.</div>
       <p>
-        EnterpriseNGR is a member-led advisory body that promotes the growth and development of Nigeria’s financial and professional services ecosystem.
+        EnterpriseNGR is a member-led advocacy group that promotes the growth and development of Nigeria’s Financial and Professional Services (FPS) sector.
       </p>
       <div>
         <a href="about.html"><button class="big_btn">
@@ -87,10 +87,10 @@
 
       <div class="economy_description">
         <div class="bold">
-          The Financial and Professional Services (FPS) sector has the potential to be the largest tax payer, largest employer, biggest exporting industry and largest contributor to total economic output. The sector, however, needs to work in unison and speak with one voice to achieve this goal.  
+          The Financial and Professional Services (FPS) sector has the potential to be the largest tax payer, largest employer, biggest exporting industry and largest contributor to total economic output. The sector, however, needs to work in unison and speak with one voice to achieve these goals.   
         </div>
         <div class="thin">
-          To realize its potential as Africa’s premier financial center, the Nigerian FPS sector needs to work collaboratively in a deliberate, concerted effort to foster an enabling and stable policy environment that promotes an open market and competitiveness.
+          Nigeria has the potential to be Africa’s premier financial center.  To realize this potential, however, the Nigerian FPS sector needs to work collaboratively in a deliberate, concerted effort to foster an enabling and stable policy environment that promotes an open market and competitiveness.
         </div>
         <a href="about.html">  <button class="big_btn">
           <span class="iconify-inline" data-icon="bi:arrow-right-circle" style="color: #40ba7b" data-width="29"
@@ -104,7 +104,7 @@
   <section class="what_we_do">
     <div class="sm_heading">WHAT WE DO</div>
     <div class="md_heading">
-      Promoting the Nigerian Financial Professional Services Sector.
+      Promoting the Nigerian Financial and Professional Services Sector.
     </div>
     <div class="thin">
       EnterpriseNGR is positioned to engage in both private sector and public sector advocacy with the aim of fostering a favourable operating environment for the Financial and Professional Services sector and championing the transformation of Nigeria into an international financial center.
@@ -215,7 +215,7 @@
         <div>Voice of Enterprise</div>
       </div>
       <div class="thin">
-        Annual ENGR event that brings together key Nigerian and global industry stakeholders and policy makers from all levels of government in the effort to promote the FPS sector.
+        Annual event that brings together key Nigerian and global industry stakeholders and policy makers from all levels of government.
       </div>
       <a href="greenstart.html"><button class="md_btn">
         <span class="iconify" data-icon="bi:arrow-right-circle-fill" style="color: black;" data-width="26"></span><span
@@ -271,7 +271,7 @@
       <div class="md_heading">Membership</div>
       <div class="membership_text">
         <div class="text">
-          Join our network of members at the forefront of advancing the development and transformation of Nigeria.
+          Join our network of members at the forefront of advancing the development and transformation of Nigeria’s Financial and Professional Services (FPS) Sector.
         </div>
         <a href="member.html"><button class="md_btn">
           <span class="iconify" data-icon="bi:arrow-right-circle-fill" style="color: #40ba7b;"
