--- a/internshiplaunch.html
+++ b/internshiplaunch.html
@@ -66,18 +66,7 @@
             Time).
           </p>
           <br />
-          <p>
-            It is without doubt that Nigeria has experienced a sustained period
-            of economic growth in the last decade but this is without a
-            corresponding improvement in employment. Research work conducted in
-            the second quarter of 2020 showed that the unemployment rate in
-            Nigeria stands at 27.1%, and at that time it was estimated to reach
-            32.5% at the end of 2021. This figure was projected to further
-            increase in 2022 particularly with the youth unemployment rate
-            taking the chunk of that with 50% and this comes to about 25-30m
-            Nigerian youth.
-          </p>
-          <br />
+
           <p>
             <a href="https://jnml.io/YouthOfEnterprise"
               ><button class="md_btn green">
@@ -153,7 +142,7 @@
         <div class="tag">
           <span class="bold">Tags:</span>
           <span class="thin">Policy</span>
-          <span class="thin">Insight</span>
+          <span class="thin">Insights</span>
           <span class="thin">Enterprise</span>
         </div>
       </div>
