--- a/member.html
+++ b/member.html
@@ -40,7 +40,7 @@
 
     <section class="economy">
       <div class="md_heading center top_margin">
-        EnterpriseNGR is the only industry-led organization representing the
+        EnterpriseNGR is the only member-led organization representing the
         entire Financial and Professional Services sector.
       </div>
 
@@ -53,15 +53,16 @@
           <div class="bold">
             We offer our members the opportunity to expand their business
             priorities and partake in important policy debates that shape
-            economic growth. They also get to engage with policymakers and key
-            industry stakeholders domestically and internationally.
+            economic growth. We also provide our members with peer-to-peer
+            networking opportunities with policymakers and key industry
+            stakeholders domestically and internationally.
           </div>
           <div class="thin">
             Our members come from various sub-sectors of the Financial and
-            Professional Services sector which include Banking, Asset
-            Management, Capital Markets & Green Finance, Insurance, FinTech,
-            Professional Services (Law, Accountancy, Consulting), Islamic
-            Finance, and Business Process Outsourcing
+            Professional Services sector which includes Banking, Insurance,
+            Pensions, Capital Market Operators, Asset Management, Exchanges,
+            Depositories, Clearing Houses, FinTech, Law, Accountancy, and
+            Management Consulting.
           </div>
           <a href="about.html"
             ><button class="big_btn">
@@ -87,27 +88,16 @@
         <div class="grid">
           <div class="item">
             <div class="md_heading">Founding Members</div>
-            <div class="pricing">
-              <div class="sm_heading">₦100m One-off</div>
-            </div>
             <div class="thin">
-              This is our highest class of membership and they are custodians of
-              the EnterpriseNGR Vision and as such will be given voting rights.
-              They provide long-term leadership and become members of the Board
-              of Directors on a rotational basis.
+              This is our highest class of membership. Founding Members pay a
+              one-off seed fund contribution.
             </div>
           </div>
           <div class="item">
             <div class="md_heading">Ordinary Members</div>
-            <div class="pricing">
-              <div class="sm_heading">GOLD (₦10m annually)</div>
-              <div class="sm_heading">SILVER (₦5m annually)</div>
-              <div class="sm_heading">BRONZE (₦1m annually)</div>
-            </div>
             <div class="thin">
-              Institutions in the Nigerian Financial and Professional Services
-              sector who pay the annual membership fee. They shall have rights
-              to vote additional Board members.
+              Ordinary Members pay annual membership subscription ranging from
+              NGN1M to NGN10M.
             </div>
           </div>
         </div>
@@ -144,21 +134,23 @@
           <div class="item">
             <div class="md_heading">Leadership and Governance</div>
             <div class="thin">
-              Members have several opportunities to participate in the
-              governance leadership of the organisation. This includes via
-              involvement in various member committees on thematic issues in
-              Financial and Professional Services sector as well as other member
-              focused events and activities.
+              We value the engagement and involvement of all our members in
+              EnterpriseNGR’s governance and advocacy. Members have several
+              opportunities to participate in the Advisory Council, Board of
+              Directors, and member committees on thematic issues in the
+              Financial and Professional Services sector as well as other
+              member-focused events, depending on their interest and membership
+              category.
             </div>
           </div>
 
           <div class="item">
             <div class="md_heading">Policy Consultation and Development</div>
             <div class="thin">
-              Members have the opportunity to influence policy by engaging
-              government, policy makers and senior stakeholders on key issues
-              facing the Nigeria-based financial and professional services
-              industry and their customers.
+              Members are at the forefront of EnterpriseNGR’s advocacy and have
+              the opportunity to influence policy by engaging government,
+              policymakers, and senior stakeholders on key issues facing the
+              Nigeria’s Financial and Professional Services sector.
             </div>
           </div>
 
@@ -175,9 +167,9 @@
           <div class="item">
             <div class="md_heading">Recognition and Branding</div>
             <div class="thin">
-              Members and member organizations are given recognition during
-              events and stakeholder engagements; members’ logo and / profile
-              are included in the member recognition page on the website and
+              Member organizations are given recognition during EnterpriseNGR’s
+              events and stakeholder engagements; members’ logos and/or profiles
+              are included on the member recognition page on the website and
               communication platforms and materials.
             </div>
           </div>
@@ -367,6 +359,46 @@
           <div class="card"></div>
           <div class="card"></div>
         </div>
+      </div>
+    </section>
+
+    <section class="enterprise_voice">
+      <div class="voice">
+        <div class="md_heading">
+          <div>EnterpriseNGR |</div>
+          <div>Voice of Enterprise</div>
+        </div>
+        <div class="thin">
+          Annual event that brings together key Nigerian and global industry
+          stakeholders and policy makers from all levels of government.
+        </div>
+        <a href="greenstart.html"
+          ><button class="md_btn">
+            <span
+              class="iconify"
+              data-icon="bi:arrow-right-circle-fill"
+              style="color: black"
+              data-width="26"
+            ></span
+            ><span class="btn_text">Learn More</span>
+          </button></a
+        >
+      </div>
+      <div class="green">
+        <div>JOIN NOW</div>
+        <div class="md_heading">Monthly Newsletter</div>
+        <form action="">
+          <input type="email" placeholder="Enter your email address" />
+          <button class="md_btn">
+            <span
+              class="iconify"
+              data-icon="bi:arrow-right-circle-fill"
+              style="color: #40ba7b"
+              data-width="26"
+            ></span
+            ><span class="btn_text">Subscribe</span>
+          </button>
+        </form>
       </div>
     </section>
 
