--- a/policyinsight.html
+++ b/policyinsight.html
@@ -56,8 +56,8 @@
           <div class="child">EnterpriseNGR</div>
         </div>
         <div class="md_heading">
-          Environmental, Social and Governance - the urgency of the
-          implementation
+          Environmental, Social and Governance - the Urgency of the
+          Implementation
         </div>
         <div class="article_text">
           <p>
@@ -269,7 +269,7 @@
         <div class="tag">
           <span class="bold">Tags:</span>
           <span class="thin">Policy</span>
-          <span class="thin">Insight</span>
+          <span class="thin">Insights</span>
           <span class="thin">Enterprise</span>
         </div>
       </div>
