--- a/policyinsight.html
+++ b/policyinsight.html
@@ -51,7 +51,7 @@
           <img src="images/stateofngr.jpg" alt="" />
         </div>
         <div class="article_detail">
-          <div class="child green">Policy,Insight |</div>
+          <div class="child green">Policy Insights |</div>
           <div class="child">April 12, 2022 |</div>
           <div class="child">EnterpriseNGR</div>
         </div>
