--- a/news.html
+++ b/news.html
@@ -45,7 +45,7 @@
             <div class="image">
               <img src="images/yoe-invitation-img.png" alt="" />
             </div>
-            <div class="thin date">April 12, 2022 | EnterpriseNGR</div>
+            <div class="thin date">4 May, 2022 | EnterpriseNGR</div>
             <div class="bold title">
               Youth of Enterprise (YOE) Internship Programme Launch
             </div>
@@ -69,7 +69,7 @@
               >
             </div>
           </div>
-          <div class="card">
+          <!-- <div class="card">
             <div class="image">
               <img src="images/CEO_desk.jpg" alt="" />
             </div>
@@ -94,7 +94,8 @@
                 </button></a
               >
             </div>
-          </div>
+          </div> -->
+          <div class="card"></div>
           <div class="card"></div>
         </div>
       </div>
