--- a/policy.html
+++ b/policy.html
@@ -47,7 +47,7 @@
             <div class="image">
               <img src="images/unemployment.jpg" alt="" />
             </div>
-            <div class="thin date">April, 12 2022 | EnterpriseNGR</div>
+            <div class="thin date">7 March, 2022 | EnterpriseNGR</div>
             <div class="bold title">The State of Unemployment in Nigeria</div>
             <div class="text">
               <div class="thin description">
@@ -72,7 +72,7 @@
             <div class="image">
               <img src="images/stateofngr.jpg" alt="" />
             </div>
-            <div class="thin date">April, 12 2022 | EnterpriseNGR</div>
+            <div class="thin date">23 March, 2022 | EnterpriseNGR</div>
             <div class="bold title">March 2022 Policy Insights</div>
             <div class="text">
               <div class="thin description">
