--- a/about.html
+++ b/about.html
@@ -40,7 +40,6 @@
 
     <section class="economy">
       <div class="center_heading">
-        <div class="sm_heading">An economy with exponential potential.</div>
         <div class="md_heading">
           We are an independent member-led group established for the purpose of
           promoting and influencing an enabling policy environment for the
@@ -72,7 +71,7 @@
           </div> -->
           <div class="thin">
             <p>
-              Nigeria’s Financial and Professional S ervices (FPS) sector
+              Nigeria’s Financial and Professional Services (FPS) sector
               contributes majorly to the nation’s economic growth and hence is
               crucial to enabling the positive development of the economy. Yet,
               amongst the many subsectors within Nigeria’s FPS, only the banking
@@ -158,28 +157,42 @@
           <div class="md_heading">How We Started</div>
           <div class="thin">
             <p>
+              EnterpriseNGR was incorporated as a professional policy and
+              advocacy group, registered as a company limited by guarantee and
+              established to promote and advocate for the Financial and
+              Professional Services (“FPS”) sector of Nigeria, with a view to
+              transforming Nigeria into the premier financial services centre in
+              Africa. The FPS sector includes Banking, Insurance, Pensions,
+              Capital Market Operators, Asset Management, Exchanges,
+              Depositories, Clearing Houses, Law, Accountancy, and Management
+              Consulting.
+            </p>
+            <br />
+            <p>
+              We are an independent private sector initiative, a member-led and
+              funded non-profit company focused on advocating for the
+              improvement of the business environment for the FPS sector in
+              Nigeria while promoting the value of the sector to the wider
+              economy. Our Founding Members include Aluko & Oyebode, Chapel Hill
+              Denham, Coronation Merchant Bank Limited, FBNQuest Merchant Bank
+              Limited, FMDQ Group, The Nigerian Exchange Group, Tengen Family
+              Office represented by Mr. Aigboje Aig-Imoukhuede CON, Templars,
+              PwC Nigeria, Central Securities Clearing System Plc., Access Bank
+              Plc, Custodian Investment Plc, DLM Capital Limited, Investment One
+              Financial Services Limited, and Tangerine General Insurance
+              Limited. Our other members include Bank of Industry of Nigeria
+              Limited, First Ally Capital Limited, Polaris Bank Plc, and
+              Imperial Asset Management Limited,
+            </p>
+            <br />
+            <p>
               As a consolidated advocacy group, we support government and
-              regulators in the formation of policies that improve the financial
-              inclusion and performance of FPS sector operators in Nigeria.
+              regulators in the formation of policies that improve financial
+              inclusion and the performance of FPS sector operators in Nigeria.
               These policies will result in increased tax receipts for the
               government, increased credit to the real sector, and overall
-              increased employment opportunities. We take pride in doing this
-              while protecting the interest of our members.
-            </p>
-            <br />
-            <p>
-              EnterpriseNGR was founded by some of the sector's key players; its
-              members comprise industry professionals from various subsectors of
-              the Nigerian FPS sector.
-            </p>
-            <br />
-            <p>
-              Our focus is to transform Nigeria into the premier financial
-              services center in Africa, improve financial literacy and
-              inclusion, and significantly impact the quality of life of
-              Nigerians. We leverage the expertise of our members to tap the
-              nation’s teeming economic potential in a bid to develop a strong
-              and resilient economy.
+              increased employment opportunities. We take pride in advocating
+              for the FPS sector and the interest of our members.
             </p>
           </div>
         </div>
@@ -190,54 +203,7 @@
       </div>
     </section>
 
-    <!-- <section class="mission_vision_value">
-      <div class="buttons">
-        <button class="mission_btn active">MISSION</button
-        ><button class="mission_btn">VISION</button
-        ><button class="mission_btn">VALUES</button>
-      </div>
-      <div class="thin mission_text show">
-        To be a leading voice and champion for the development and
-        transformation of Nigeria.
-      </div>
-      <div class="thin mission_text">
-        To advance Nigeria’s transformation as Africa’s premier financial
-        services centre
-      </div>
-      <div class="mission_text">
-        <ul>
-          <li>
-            <span
-              class="iconify"
-              data-icon="bi:arrow-right-circle-fill"
-              style="color: #40ba7b"
-              data-width="26"
-            ></span
-            >Financial Inclusion.
-          </li>
-          <li>
-            <span
-              class="iconify"
-              data-icon="bi:arrow-right-circle-fill"
-              style="color: #40ba7b"
-              data-width="26"
-            ></span
-            >Digitization.
-          </li>
-          <li>
-            <span
-              class="iconify"
-              data-icon="bi:arrow-right-circle-fill"
-              style="color: #40ba7b"
-              data-width="26"
-            ></span
-            >Regionalization.
-          </li>
-        </ul>
-      </div>
-    </section> -->
-
-    <section class="mission_vision">
+    <!-- <section class="mission_vision">
       <div class="green">
         <div class="sm_heading">Mission</div>
         <div class="thin">
@@ -291,7 +257,7 @@
           </ul>
         </div>
       </div>
-    </section>
+    </section> -->
 
     <section class="latest_news team">
       <div class="news">
@@ -309,7 +275,7 @@
               </div>
               <div class="sm_heading">Aigboje Aig-Imoukhuede</div>
               <div class="bold">Chairman</div>
-              <div class="bold">Tengen Family Office</div>
+              <div class="bold">Founder, Tengen Family Office</div>
             </div>
 
             <div class="card">
@@ -327,7 +293,7 @@
               </div>
               <div class="sm_heading">Banjo Adegbohungbe</div>
               <div class="bold">Director</div>
-              <div class="bold">Coronation Merchant Bank</div>
+              <div class="bold">MD/CEO, Coronation Merchant Bank</div>
             </div>
 
             <div class="card">
@@ -336,7 +302,7 @@
               </div>
               <div class="sm_heading">Bola Onadele Koko</div>
               <div class="bold">Director</div>
-              <div class="bold">FMDQ Group</div>
+              <div class="bold">CEO, FMDQ Group</div>
             </div>
 
             <div class="card">
@@ -345,7 +311,7 @@
               </div>
               <div class="sm_heading">Bolaji Balogun</div>
               <div class="bold">Director</div>
-              <div class="bold">Chapelhill Denham</div>
+              <div class="bold">CEO, Chapel Hill Denham</div>
             </div>
 
             <div class="card">
@@ -354,7 +320,7 @@
               </div>
               <div class="sm_heading">Gbenga Oyebode</div>
               <div class="bold">Director</div>
-              <div class="bold">Aluko & Oyebode</div>
+              <div class="bold">Of Counsel, Aluko & Oyebode</div>
             </div>
 
             <div class="card">
@@ -363,7 +329,7 @@
               </div>
               <div class="sm_heading">Kayode Akinkugbe</div>
               <div class="bold">Director</div>
-              <div class="bold">FBNQuest Merchant Bank</div>
+              <div class="bold">MD/CEO, FBNQuest Merchant Bank Ltd</div>
             </div>
 
             <div class="card">
@@ -372,7 +338,7 @@
               </div>
               <div class="sm_heading">Oscar Onyema</div>
               <div class="bold">Director</div>
-              <div class="bold">NGX Group</div>
+              <div class="bold">Group CEO, NGX Group</div>
             </div>
           </div>
         </div>
@@ -450,7 +416,7 @@
           <div>
             <div class="sm_heading">Aigboje Aig-Imoukhuede</div>
             <div class="bold">Chairman</div>
-            <div class="bold">Tengen Family Office</div>
+            <div class="bold">Founder, Tengen Family Office</div>
             <div class="thin">
               Mr. Aigboje Aig-Imoukhuede is the Chairman of EnterpriseNGR. He
               also currently serves as Chairman - Wapic Insurance Plc; and was a
@@ -499,7 +465,7 @@
           <div>
             <div class="sm_heading">Banjo Adegbohungbe</div>
             <div class="bold">Director</div>
-            <div class="bold">Coronation Merchant Bank</div>
+            <div class="bold">MD/CEO, Coronation Merchant Bank</div>
             <div class="thin">Banjo is MD/CEO of Coronation Merchant Bank.</div>
           </div>
         </div>
@@ -516,7 +482,7 @@
           <div>
             <div class="sm_heading">Bola "Koko" Onadele</div>
             <div class="bold">Director</div>
-            <div class="bold">FMDQ Group</div>
+            <div class="bold">CEO, FMDQ Group</div>
             <div class="thin">Koko is the MD/CEO of FMDQ OTC Plc.</div>
           </div>
         </div>
@@ -532,10 +498,10 @@
           </div>
           <div>
             <div class="sm_heading">Bolaji Balogun</div>
-            <div class="bold">Chairman</div>
-            <div class="bold">Chapelhill Denham</div>
+            <div class="bold">Director</div>
+            <div class="bold">CEO, Chapel Hill Denham</div>
             <div class="thin">
-              Bolaji Balogun is the MD/CEO of Chapelhill Denham.
+              Bolaji Balogun is the MD/CEO of Chapel Hill Denham.
             </div>
           </div>
         </div>
@@ -571,7 +537,7 @@
           <div>
             <div class="sm_heading">Kayode Akinkugbe</div>
             <div class="bold">Director</div>
-            <div class="bold">FBNQuest Merchant Bank Limited</div>
+            <div class="bold">MD/CEO, FBNQuest Merchant Bank Ltd.</div>
             <div class="thin">
               Kayode Akinkugbe is the MD/CEO of FBNQuest Merchant Bank Limited.
             </div>
@@ -590,7 +556,7 @@
           <div>
             <div class="sm_heading">Oscar Onyema</div>
             <div class="bold">Director</div>
-            <div class="bold">NGX Group</div>
+            <div class="bold">Group CEO, NGX Group</div>
             <div class="thin">
               Oscar Onyema is the Group MD/CEO of the NGX Group
             </div>
@@ -738,27 +704,6 @@
             <div class="bold">Head of Programmes</div>
 
             <div class="thin">Oge is the Head of Programmes.</div>
-          </div>
-        </div>
-        <div class="close_btn">
-          <button class="close_popup">Close</button>
-        </div>
-      </div>
-
-      <div class="popup_modal">
-        <div class="grid">
-          <div class="image">
-            <img src="images/aigboje.png" alt="Aigboje Aig-Imoukhuede" />
-          </div>
-          <div>
-            <div class="sm_heading">Aigboje Aig-Imoukhuede</div>
-            <div class="bold">Chairman</div>
-            <div class="bold">Tengen Family Office</div>
-            <div class="thin">
-              Mr. Aigboje Aig-Imoukhuede is the Chairman of EnterpriseNGR. He
-              also currently serves as Chairman - Wapic Insurance Plc; and was a
-              former President, Nigeria Stock Exchange.
-            </div>
           </div>
         </div>
         <div class="close_btn">
