--- a/member.html
+++ b/member.html
@@ -280,6 +280,18 @@
         <div class="image">
           <img src="images/img15.png" alt="partner_logo" />
         </div>
+        <div class="image">
+          <img src="images/img16.png" alt="partner_logo" />
+        </div>
+        <div class="image">
+          <img src="images/img17.png" alt="partner_logo" />
+        </div>
+        <div class="image">
+          <img src="images/img18.png" alt="partner_logo" />
+        </div>
+        <div class="image">
+          <img src="images/img19.png" alt="partner_logo" />
+        </div>
       </div>
     </section>
 
@@ -314,31 +326,25 @@
           The latest news from EnterpriseNGR and the financial services sector.
         </div>
         <div class="cards">
-          <div class="card">
+          <!-- <div class="card">
             <div class="image">
               <img src="images/CEO_desk.jpg" alt="" />
             </div>
             <div class="sm_heading text">April 12, 2022</div>
             <div class="bold text">From the CEO’s Desk</div>
             <div class="text">
-              <a href="ceodesk.html"
-                ><button class="md_btn">
-                  <span
-                    class="iconify"
-                    data-icon="bi:arrow-right-circle-fill"
-                    style="color: black"
-                    data-width="26"
-                  ></span>
-                  <span class="btn_text">Read More</span>
-                </button></a
-              >
+              <a href="ceodesk.html"><button class="md_btn">
+                <span class="iconify" data-icon="bi:arrow-right-circle-fill" style="color: black;" data-width="26"></span>
+                <span class="btn_text">Read More</span>
+              </button></a>
+              
             </div>
-          </div>
+          </div> -->
           <div class="card">
             <div class="image">
               <img src="images/yoe-invitation-img.png" alt="" />
             </div>
-            <div class="sm_heading text">April 12, 2022</div>
+            <div class="sm_heading text">4 May, 2022</div>
             <div class="bold text">
               Youth of Enterprise (YOE) Internship Programme Launch
             </div>
@@ -356,6 +362,7 @@
               >
             </div>
           </div>
+          <div class="card"></div>
           <div class="card"></div>
           <div class="card"></div>
         </div>
