--- a/policyinsight.html
+++ b/policyinsight.html
@@ -52,7 +52,7 @@
         </div>
         <div class="article_detail">
           <div class="child green">Policy Insights |</div>
-          <div class="child">April 12, 2022 |</div>
+          <div class="child">23 March, 2022 |</div>
           <div class="child">EnterpriseNGR</div>
         </div>
         <div class="md_heading">
@@ -293,31 +293,25 @@
           The latest news from EnterpriseNGR and the financial services sector.
         </div>
         <div class="cards">
-          <div class="card">
+          <!-- <div class="card">
             <div class="image">
               <img src="images/CEO_desk.jpg" alt="" />
             </div>
             <div class="sm_heading text">April 12, 2022</div>
             <div class="bold text">From the CEO’s Desk</div>
             <div class="text">
-              <a href="ceodesk.html"
-                ><button class="md_btn">
-                  <span
-                    class="iconify"
-                    data-icon="bi:arrow-right-circle-fill"
-                    style="color: black"
-                    data-width="26"
-                  ></span>
-                  <span class="btn_text">Read More</span>
-                </button></a
-              >
+              <a href="ceodesk.html"><button class="md_btn">
+                <span class="iconify" data-icon="bi:arrow-right-circle-fill" style="color: black;" data-width="26"></span>
+                <span class="btn_text">Read More</span>
+              </button></a>
+              
             </div>
-          </div>
+          </div> -->
           <div class="card">
             <div class="image">
               <img src="images/yoe-invitation-img.png" alt="" />
             </div>
-            <div class="sm_heading text">April 12, 2022</div>
+            <div class="sm_heading text">4 May, 2022</div>
             <div class="bold text">
               Youth of Enterprise (YOE) Internship Programme Launch
             </div>
@@ -335,6 +329,7 @@
               >
             </div>
           </div>
+          <div class="card"></div>
           <div class="card"></div>
           <div class="card"></div>
         </div>
