--- a/about.html
+++ b/about.html
@@ -203,7 +203,7 @@
       </div>
     </section>
 
-    <!-- <section class="mission_vision">
+    <section class="mission_vision">
       <div class="green">
         <div class="sm_heading">Mission</div>
         <div class="thin">
@@ -257,7 +257,7 @@
           </ul>
         </div>
       </div>
-    </section> -->
+    </section>
 
     <section class="latest_news team">
       <div class="news">
