--- a/greenstart.html
+++ b/greenstart.html
@@ -37,7 +37,10 @@
       <div class="landing_page">
         <div class="heading">Get your</div>
         <div class="heading">#GreenStart</div>
-        <p>This is the start of your journey to the career of your dreams.</p>
+        <p>
+          Youth of Enterprise offers young graduates a #greenstart to the career
+          of their dreams
+        </p>
         <a href="http://youthofenterprise.ng/login"
           ><button class="big_btn">
             <span
