--- a/member.html
+++ b/member.html
@@ -81,7 +81,7 @@
     </section>
 
     <section class="membership_category">
-      <div class="sm_heading">MEMBERSHIP BENEFITS</div>
+      <div class="sm_heading">MEMBERSHIP CATEGORIES</div>
       <div class="md_heading">We currently have 2 membership categories:</div>
 
       <div class="wrapper">
