--- a/about.html
+++ b/about.html
@@ -715,10 +715,10 @@
     <section class="advisory_council">
       <div class="md_heading">Advisory Council</div>
       <div class="thin">
-        EnterpriseNGR’s Advisory Council is the senior consultative forum of the
-        organisation. The Advisory Council consists of a high-level
-        representation of industry leaders, and supports the Board in effective
-        leadership and governance.
+        EnterpriseNGR’s Advisory Council is yet to be constituted but will be
+        the senior consultative forum of the Company. The Advisory Council will
+        consist of a high-level representation of industry leaders, and relevant
+        stakeholder institutions.
       </div>
     </section>
 
