--- a/greenstart.html
+++ b/greenstart.html
@@ -150,8 +150,8 @@
           <div class="thin">
             The National Population Commission places Nigeria’s population at
             about 220 million with 50% of the population comprising youth.
-            Unfortunately, over 38.5% of Nigerian youth remain unemployed and a
-            larger percentage are underemployed (NBS, 2022).
+            Unfortunately, over 42% of Nigerian youth remain unemployed and a
+            larger percentage are underemployed.
           </div>
           <div class="thin">
             With the YOE Internship Programme we seek to improve the
