--- a/internshiplaunch.html
+++ b/internshiplaunch.html
@@ -221,25 +221,31 @@
         </div>
         <div class="column">
           <div><a href="agenda.html">Our Agenda</a></div>
-          <div><a href="member.html"></a>Membership</div>
-          <div><a href="policy.html"></a>Policy & Research</div>
-          <div><a href="news.html"></a>News & Events</div>
+          <div><a href="member.html">Membership</a></div>
+          <div><a href="policy.html">Policy & Research</a></div>
+          <div><a href="news.html">News & Events</a></div>
         </div>
         <div class="column">
           <div><a href="contact.html">Contact Us</a></div>
           <div><a href="about.html">About EnterpriseNGR</a></div>
           <div class="social_icons">
             <div class="item">
-              <a href=""><img src="images/Vector.png" alt="" /></a>
+              <a href="https://web.facebook.com/EnterpriseNGR1"
+                ><img src="images/Vector.png" alt=""
+              /></a>
             </div>
             <div class="item">
-              <a href=""><img src="images/ig.png" alt="" /></a>
+              <a href="https://instagram.com/enterprisengr"
+                ><img src="images/ig.png" alt=""
+              /></a>
             </div>
             <div class="item">
               <a href=""><img src="images/twitter.png" alt="" /></a>
             </div>
             <div class="item">
-              <a href=""><img src="images/linkedin.png" alt="" /></a>
+              <a href="https://www.linkedin.com/company/enterprisengr/"
+                ><img src="images/linkedin.png" alt=""
+              /></a>
             </div>
           </div>
         </div>
