--- a/unemploymentstate.html
+++ b/unemploymentstate.html
@@ -69,13 +69,11 @@
           <p>
             It is without doubt that Nigeria has experienced a sustained period
             of economic growth in the last decade but this is without a
-            corresponding improvement in employment. Research work conducted in
-            the second quarter of 2020 showed that the unemployment rate in
-            Nigeria stands at 27.1%, and at that time it was estimated to reach
-            32.5% at the end of 2021. This figure was projected to further
-            increase in 2022 particularly with the youth unemployment rate
-            taking the chunk of that with 50% and this comes to about 25-30m
-            Nigerian youth.
+            corresponding improvement in employment. Over 42% of Nigerian youth
+            remain unemployed and a larger percentage are underemployed. This
+            figure was projected to further increase in 2022 particularly with
+            the youth unemployment rate taking the chunk of that with 50% and
+            this comes to about 25-30m Nigerian youth.
           </p>
           <br />
           <p>
