--- a/index.html
+++ b/index.html
@@ -305,16 +305,22 @@
         <div><a href="about.html">About EnterpriseNGR</a></div>
         <div class="social_icons">
           <div class="item">
-            <a href=""><img src="images/Vector.png" alt="" /></a>
+            <a href="https://web.facebook.com/EnterpriseNGR1"
+              ><img src="images/Vector.png" alt=""
+            /></a>
           </div>
           <div class="item">
-            <a href=""><img src="images/ig.png" alt="" /></a>
+            <a href="https://instagram.com/enterprisengr"
+              ><img src="images/ig.png" alt=""
+            /></a>
           </div>
           <div class="item">
             <a href=""><img src="images/twitter.png" alt="" /></a>
           </div>
           <div class="item">
-            <a href=""><img src="images/linkedin.png" alt="" /></a>
+            <a href="https://www.linkedin.com/company/enterprisengr/"
+              ><img src="images/linkedin.png" alt=""
+            /></a>
           </div>
         </div>
       </div>
