--- a/news.html
+++ b/news.html
@@ -100,6 +100,7 @@
         </div>
       </div>
     </section>
+
     <footer>
       <div class="contact_info">
         <div><img src="images/EnterpriseNGRLogo.png" /></div>
@@ -121,16 +122,22 @@
           <div><a href="about.html">About EnterpriseNGR</a></div>
           <div class="social_icons">
             <div class="item">
-              <a href=""><img src="images/Vector.png" alt="" /></a>
+              <a href="https://web.facebook.com/EnterpriseNGR1"
+                ><img src="images/Vector.png" alt=""
+              /></a>
             </div>
             <div class="item">
-              <a href=""><img src="images/ig.png" alt="" /></a>
+              <a href="https://instagram.com/enterprisengr"
+                ><img src="images/ig.png" alt=""
+              /></a>
             </div>
             <div class="item">
               <a href=""><img src="images/twitter.png" alt="" /></a>
             </div>
             <div class="item">
-              <a href=""><img src="images/linkedin.png" alt="" /></a>
+              <a href="https://www.linkedin.com/company/enterprisengr/"
+                ><img src="images/linkedin.png" alt=""
+              /></a>
             </div>
           </div>
         </div>
