--- a/contact.html
+++ b/contact.html
@@ -79,7 +79,7 @@
           </div>
           <div class="social_icons">
             <div class="item">
-              <a href=""
+              <a href="https://web.facebook.com/EnterpriseNGR1"
                 ><span
                   class="iconify social"
                   data-icon="akar-icons:facebook-fill"
@@ -101,7 +101,7 @@
               ></a>
             </div>
             <div class="item">
-              <a href=""
+              <a href="https://instagram.com/enterprisengr"
                 ><span
                   class="iconify social"
                   data-icon="akar-icons:instagram-fill"
