--- a/member.html
+++ b/member.html
@@ -233,7 +233,7 @@
     </section>
 
     <section class="founding_members">
-      <div class="md_heading">Our Founding Members</div>
+      <div class="md_heading">Our Members</div>
       <div class="img_grid">
         <div class="image">
           <img src="images/img1.png" alt="partner_logo" />
