--- a/contact.html
+++ b/contact.html
@@ -111,6 +111,17 @@
                 ></span
               ></a>
             </div>
+            <div class="item">
+              <a href="https://www.linkedin.com/company/enterprisengr/"
+                ><span
+                  class="iconify social"
+                  data-icon="icomoon-free:linkedin"
+                  style="color: #40ba7b"
+                  data-width="35"
+                  data-height="35"
+                ></span
+              ></a>
+            </div>
           </div>
         </div>
 
