--- a/agenda.html
+++ b/agenda.html
@@ -10,6 +10,7 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
     />
     <title>Our Agenda</title>
+    <link rel="icon" type="image/x-icon" href="/images/logo1.png" />
   </head>
   <body>
     <header class="header agenda">
