--- a/policyinsight.html
+++ b/policyinsight.html
@@ -15,6 +15,7 @@
     ></script>
     <link rel="stylesheet" href="" />
     <title>News and Media</title>
+    <link rel="icon" type="image/x-icon" href="/images/logo1.png" />
   </head>
   <body>
     <header class="article_header">
